Fix: (Backend) Warnings - ajusta backend com as melhores praticas